--- a/src/components/bottomNav/bottomNav.module.less
+++ b/src/components/bottomNav/bottomNav.module.less
@@ -1,50 +1,38 @@
 .bottomNavWrap {
-    width: 137px;
-    height: 324px;
-    background-color: rgb(241, 238, 241);
+    width: 100%;
+    height: 98px;
+    background-color: rgba(169, 236, 245, 0.377);
     position: fixed;
-    top: 98px;
-    left: 30px;
+    bottom: 0px;
+    left: 0px;
     z-index: 999;
+    box-sizing: border-box;
+    padding-bottom: 10px;
     :global {
       display: flex;
-      flex-direction: column;
+      justify-content: space-between;
       align-items: center;
       .noselected {
-        display: flex;
-        align-items: center;
-        box-sizing: border-box;
-        padding-left: 20px;
-        width: 156px;
-        height: 40px;
-        margin-top: 14px;
-        border-radius: 4px;
-        .iconfire {
-          font-size: 20px;
-          height: 20px;
-          width: 20px;
-          line-height: 20px;
-          margin-right: 10px;
-          color: #f0310f;
-        }
+        flex:1;
+        position: relative;
+        text-align: center;
+        text-decoration: none;
         .icon {
           font-size: 20px;
-          height: 20px;
-          width: 20px;
-          line-height: 20px;
-          margin-right: 10px;
-          color: #f1ee37;
+          color: #AAA !important;
         }
         .tit {
-          font-size: 16px;
+          font-size: 13px;
           color: #000000;
         }
       }
       .selected {
-        background-color: #611b58;
-        box-shadow:0px 3px 7px #333333;
+        .icon {
+          color: #8080FF !important;
+        }
         .tit {
-          color: #ffffff;
+          color: #8080FF;
+          font-weight: 600;
         }
       }
     }
