--- a/src/pages/index/index.module.less
+++ b/src/pages/index/index.module.less
@@ -6,6 +6,54 @@
     overflow: hidden;
     position: relative;
     :global {
-
+        .functionalBtnCon {
+            position: fixed;
+            bottom: 120px;
+            left: 0;
+            width: 100%;
+            box-sizing: border-box;
+            padding: 0px 10px 0px 10px;
+        }
+        .onlineBar {
+            position: fixed;
+            bottom: 250px;
+            left: 0;
+            width: 100%;
+            height: 24px;
+            line-height: 24px !important;
+            background-color: rgba(225, 250, 250, 0);
+            .am-notice-bar-content {
+                margin: 0px !important;
+                .am-notice-bar-marquee-wrap  {
+                    display: block;
+                    background-color: rgba(225, 250, 250, 0.459);
+                    .am-notice-bar-marquee {
+                        padding-left: 15px;
+                    }
+                }
+                
+            }
+        }
+        .onlineBarHidden {
+            position: fixed;
+            bottom: 250px;
+            left: 0;
+            width: 100%;
+            height: 24px;
+            line-height: 24px !important;
+            background-color: rgba(225, 250, 250, 0);
+            .am-notice-bar-content {
+                margin: 0px !important;
+                .am-notice-bar-marquee-wrap  {
+                    display: none;
+                    background-color: rgba(225, 250, 250, 0.459);
+                    .am-notice-bar-marquee {
+                        padding-left: 15px;
+                    }
+                }
+                
+            }
+        }
+        
     }
 }
