--- a/src/pages/index/index.module.less
+++ b/src/pages/index/index.module.less
@@ -55,5 +55,12 @@
             }
         }
         
+        // 地图
+        #allmap {
+            width: 100%;
+            height: 600px;
+            overflow: hidden;
+            margin: 0;
+        }
     }
 }
