--- a/src/components/bottomNav/bottomNav.module.less
+++ b/src/components/bottomNav/bottomNav.module.less
@@ -1,7 +1,7 @@
 .bottomNavWrap {
     width: 100%;
     height: 98px;
-    background-color: rgba(169, 236, 245, 0.377);
+    background-color: rgb(246, 251, 252);
     position: fixed;
     bottom: 0px;
     left: 0px;
