--- a/src/pages/index/index.module.less
+++ b/src/pages/index/index.module.less
@@ -9,6 +9,7 @@
         .functionalBtnCon {
             position: fixed;
             bottom: 120px;
+            z-index: 999;
             left: 0;
             width: 100%;
             box-sizing: border-box;
@@ -18,6 +19,7 @@
             position: fixed;
             bottom: 250px;
             left: 0;
+            z-index: 999;
             width: 100%;
             height: 24px;
             line-height: 24px !important;
@@ -40,6 +42,7 @@
             left: 0;
             width: 100%;
             height: 24px;
+            z-index: 999;
             line-height: 24px !important;
             background-color: rgba(225, 250, 250, 0);
             .am-notice-bar-content {
