--- a/src/pages/index/index.module.less
+++ b/src/pages/index/index.module.less
@@ -13,6 +13,9 @@
             transform: translate(-50%,-50%);
             z-index: 99999;
         }
+        .mainSpinHide {
+            display: none;
+        }
         .searchTopBar{
             position: fixed;
             top: 0px;
