开发 我要收 模块

--- a/src/pages/index/index.module.less
+++ b/src/pages/index/index.module.less
@@ -102,6 +102,9 @@
             height: 600px;
             overflow: hidden;
             margin: 0;
+            .anchorBL{ 
+                display:none;
+            }
         }
     }
 }
